--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="button_send">Enviar</string>
     <string name="title_activity_display_message">My Message</string>
     <string name="action_search">Buscar</string>
+    <string name="test_checkIn">TEst</string>
 </resources>
