--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="action_search">Buscar</string>
     <string name="test_checkIn">TEst </string>
     <string name="test_checkOut">TEst2 </string>
+    <string name="title_activity_pantalla2">Pantalla2</string>
 </resources>
